force-app/main/default/objects/Dev_Forms__c/Dev_Forms__c.object-meta.xml
<CustomObject>
    <description>Developer Marketing :</description>
    <label>Dev Forms</label>
    <nameField>
        <displayFormat>DSN-{00000}</displayFormat>
        <label>Form ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Dev Forms</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>