force-app/main/default/objects/Dev_Forms__c/fields/Dev_Event__c.field-meta.xml
<CustomField>
    <fullName>Dev_Event__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Dev Event</label>
    <referenceTo>Developer_Event__c</referenceTo>
    <relationshipName>Dev_Survey</relationshipName>
    <type>Lookup</type>
</CustomField>