force-app/main/default/objects/Dev_Forms__c/fields/Dev_Program__c.field-meta.xml
<CustomField>
    <fullName>Dev_Program__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Looks up from Dev program</description>
    <label>Dev Program</label>
    <referenceTo>Developer_Program__c</referenceTo>
    <relationshipLabel>Dev Forms</relationshipLabel>
    <relationshipName>Dev_Survey</relationshipName>
    <type>Lookup</type>
</CustomField>