force-app/main/default/objects/Dev_Forms__c/fields/Dev_Review_Reason__c.field-meta.xml
<CustomField>
    <fullName>Dev_Review_Reason__c</fullName>
    <label>Review Reason</label>
    <length>512</length>
    <type>LongTextArea</type>
</CustomField>