force-app/main/default/objects/Dev_Forms__c/fields/Form_Method__c.field-meta.xml
<CustomField>
    <fullName>Form_Method__c</fullName>
    <label>Form Method</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>