force-app/main/default/objects/Dev_Forms__c/fields/Form_Type__c.field-meta.xml
<CustomField>
    <fullName>Form_Type__c</fullName>
    <label>Form Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Event Registration</fullName>
            </value>
            <value>
                <fullName>Feedback Survey</fullName>
            </value>
            <value>
                <fullName>Registered Developer Application</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>