force-app/main/default/objects/Dev_Forms__c/fields/Other_Form_Type__c.field-meta.xml
<CustomField>
    <fullName>Other_Form_Type__c</fullName>
    <label>Other Form Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>