force-app/main/default/objects/Dev_Forms__c/fields/Owner__c.field-meta.xml
<CustomField>
    <fullName>Owner__c</fullName>
    <label>Owner</label>
    <length>128</length>
    <required>true</required>
    <type>Text</type>
</CustomField>