force-app/main/default/objects/Dev_Forms__c/fields/Published__c.field-meta.xml
<CustomField>
    <fullName>Published__c</fullName>
    <label>Published</label>
    <type>Date</type>
</CustomField>