force-app/main/default/objects/Dev_Forms__c/fields/Survey_ID__c.field-meta.xml
<CustomField>
    <fullName>Survey_ID__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>Survey ID obtained from the DevZone API to be used for comparison by Mulesoft in order to reference a DevZone feedback survey</description>
    <label>Survey ID</label>
    <length>16</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>